--- a/package.json
+++ b/package.json
@@ -10,17 +10,56 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.31",
+    "@nextui-org/input": "^2.1.21",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
+    "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-fs": "2.0.0-beta.2",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "framer-motion": "^11.1.7",
+    "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
+    "react-i18next": "^14.1.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": ">=2.0.0-beta.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "3.4.3",
     "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "@tauri-apps/cli": ">=2.0.0-beta.0"
+    "vite": "^5.0.0"
+  },
+  "prettier": {
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ],
+    "printWidth": 120,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "quoteProps": "as-needed",
+    "jsxSingleQuote": false,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "arrowParens": "avoid",
+    "htmlWhitespaceSensitivity": "css",
+    "overrides": [
+      {
+        "files": [
+          "**/*.css"
+        ],
+        "options": {
+          "singleQuote": false
+        }
+      }
+    ]
   }
 }
