--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/system": "^2.1.2",
+    "@nextui-org/table": "^2.0.33",
     "@nextui-org/theme": "^2.2.3",
     "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-dialog": "2.0.0-beta.2",
     "@tauri-apps/plugin-fs": "2.0.0-beta.2",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "i18next": "^23.11.2",
     "react": "^18.2.0",
