--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,4 +15,6 @@ tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-fs = "2.0.0-beta.6"
+tauri-plugin-dialog = "2.0.0-beta.6"
 
