--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,4 +17,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2.0.0-beta.6"
 tauri-plugin-dialog = "2.0.0-beta.6"
+kamadak-exif = "0.5.5"
 
