--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
     "@nextui-org/table": "^2.0.33",
     "@nextui-org/theme": "^2.2.3",
     "@nextui-org/tooltip": "^2.0.33",
-    "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-dialog": "2.0.0-beta.2",
-    "@tauri-apps/plugin-fs": "2.0.0-beta.2",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tauri-apps/api": "^2.0.0-beta.11",
+    "@tauri-apps/plugin-dialog": "^2.0.0-beta.3",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.3",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.1.7",
-    "i18next": "^23.11.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "framer-motion": "^11.1.8",
+    "i18next": "^23.11.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": ">=2.0.0-beta.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@tauri-apps/cli": "2.0.0-beta.16",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "postcss-preset-env": "^9.5.9",
+    "postcss-preset-env": "^9.5.11",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   },
   "prettier": {
     "$schema": "https://json.schemastore.org/prettierrc",
