feat: display new filename

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/input": "^2.1.21",
+    "@nextui-org/scroll-shadow": "^2.1.16",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/table": "^2.0.33",
     "@nextui-org/theme": "^2.2.3",
