--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "name-photos",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -26,7 +25,8 @@
     "i18next": "^23.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.1"
+    "react-i18next": "^14.1.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@tauri-apps/cli": "2.0.0-beta.16",
