--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/radio": "^2.0.28",
     "@nextui-org/scroll-shadow": "^2.1.16",
+    "@nextui-org/snippet": "^2.0.35",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/table": "^2.0.33",
     "@nextui-org/tabs": "^2.0.29",
@@ -49,7 +50,8 @@
     "extends": "react-app",
     "rules": {
       "react/self-closing-comp": [
-        "error", {
+        "error",
+        {
           "component": true,
           "html": true
         }
