--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,8 +12,9 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
+tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-dialog = "2.0.0-beta.6"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-dialog = "2.0.0-beta.6"
 kamadak-exif = "0.5.5"
 
