--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/input": "^2.1.21",
+    "@nextui-org/modal": "^2.0.33",
     "@nextui-org/radio": "^2.0.28",
     "@nextui-org/scroll-shadow": "^2.1.16",
     "@nextui-org/snippet": "^2.0.35",
