--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@nextui-org/button": "^2.0.31",
-    "@nextui-org/input": "^2.1.21",
-    "@nextui-org/modal": "^2.0.33",
-    "@nextui-org/radio": "^2.0.28",
-    "@nextui-org/scroll-shadow": "^2.1.16",
-    "@nextui-org/snippet": "^2.0.35",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/modal": "^2.0.36",
+    "@nextui-org/radio": "^2.1.2",
+    "@nextui-org/scroll-shadow": "^2.1.17",
+    "@nextui-org/snippet": "^2.0.38",
+    "@nextui-org/switch": "^2.0.31",
     "@nextui-org/system": "^2.1.2",
-    "@nextui-org/table": "^2.0.33",
-    "@nextui-org/tabs": "^2.0.29",
+    "@nextui-org/table": "^2.0.36",
+    "@nextui-org/tabs": "^2.0.32",
     "@nextui-org/theme": "^2.2.3",
-    "@nextui-org/tooltip": "^2.0.33",
+    "@nextui-org/tooltip": "^2.0.36",
     "@tauri-apps/api": "^2.0.0-beta.11",
     "@tauri-apps/plugin-dialog": "^2.0.0-beta.3",
     "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
@@ -45,7 +46,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "2.0.0-beta.16",
@@ -56,7 +58,7 @@
     "eslint-config-react-app": "^7.0.1",
     "postcss-preset-env": "^9.5.11",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "tailwindcss": "3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
