chore: update tauri rc

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-beta.16",
+    "@tauri-apps/cli": "2.0.0-rc.16",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
