--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,13 +8,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
-tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-dialog = "2.0.0-beta.6"
+tauri = { version = "2.0.0-rc.15", features = ["protocol-asset"] }
+tauri-plugin-shell = "2.0.0-rc.3"
+tauri-plugin-dialog = "2.0.0-rc.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 kamadak-exif = "0.5.5"
-
