--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@nextui-org/tabs": "^2.0.32",
     "@nextui-org/theme": "^2.2.3",
     "@nextui-org/tooltip": "^2.0.36",
-    "@tauri-apps/api": "^2.0.0-beta.11",
-    "@tauri-apps/plugin-dialog": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.3",
+    "@tauri-apps/api": "2.0.0-rc.5",
+    "@tauri-apps/plugin-dialog": "2.0.0-rc.1",
+    "@tauri-apps/plugin-fs": "2.0.0-rc.2",
+    "@tauri-apps/plugin-shell": "2.0.0-rc.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.8",
     "i18next": "^23.11.3",
