--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,3 +17,5 @@ tauri-plugin-dialog = "2.0.0-rc.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 kamadak-exif = "0.5.5"
+nom-exif = "2.1.0"
+chrono = "0.4.38"
