--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "i18n-ally.localesPaths": ["src/locales"],
-  "i18n-ally.keystyle": "flat",
+  "i18n-ally.keystyle": "nested",
   "i18n-ally.extract.autoDetect": true,
   "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.enabledFrameworks": ["react", "i18next"]
