--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ kamadak-exif = "0.6.1"
 nom-exif = "2.5.1"
 chrono = "0.4.41"
 tauri-plugin-process = "2.2.1"
+anyhow = "1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2.7.1"
