--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   },
+  "packageManager": "pnpm@10.26.0",
   "volta": {
-    "node": "22.14.0",
-    "pnpm": "10.8.0"
+    "node": "24.12.0",
+    "pnpm": "10.26.0"
   }
 }
