--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
-    "next": "15.0.3",
+    "next": "15.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -25,5 +25,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
+  },
+  "packageManager": "pnpm@10.26.0",
+  "volta": {
+    "node": "24.12.0",
+    "pnpm": "10.26.0"
   }
 }
